syntax = "proto3";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/duc-cnzj/mars/client/version;version";

message VersionResponse {
  string Version = 1;
  string BuildDate = 2;
  string gitBranch = 3;
  string GitCommit = 4;
  string GitTag = 5;
  string GoVersion = 6;
  string Compiler = 7;
  string Platform = 8;
  string KubectlVersion = 9;
  string HelmVersion = 10;
  string GitRepo = 11;
}

message VersionRequest{}
service Version {
  rpc Version(VersionRequest) returns (VersionResponse) {
    option (google.api.http) = {
      get: "/api/version"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: { } // Disable security key
    };
  }
}